kustomize/overlays/prod/deploy-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeapp-deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: time-app
        image: 654654314892.dkr.ecr.us-east-1.amazonaws.com/timeapp:1.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
