kustomize/overlays/prod/svc-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeapp-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
